# pycliche

./: .commitlintrc.ts  .copier-answers.yml  .editorconfig  .gitignore  .markdownlint-cli2.yaml  .pdbrc  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  LICENSE  README.md  cookiecutter.json  copier.yaml  justfile  noxfile.py  pyproject.toml
.github/actions/test/: action.yaml
.github/workflows/: ci.yaml  pr.yaml  release-please.yaml
docs/: README-dev.md  copier-badge.json
docs/media/: auto_pycliche_demo.sh  pycliche_wordmark-logo.xcf
template/: .commitlintrc.yaml  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  .release-please-manifest.json.jinja  CHANGELOG.md  README.md  README.md.jinja  justfile  justfile.jinja  noxfile.py  pyproject.toml  pyproject.toml.jinja  {%if is_github_project%}.release-please-config.json{%endif%}.jinja  {%if is_github_project%}.release-please-manifest.json{%endif%}.jinja
template/.github/actions/pre-commit/: action.yaml
template/.github/workflows/: pr.yaml  release-please.yaml
template/tests/: test_{{cookiecutter.project_name}}.py  test_{{project_name}}.py  test_{{project_name}}.py.jinja
template/{%if is_github_project%}.github{%endif%}/: dependabot.yaml
template/{%if is_github_project%}.github{%endif%}/actions/test/: action.yaml
template/{%if is_github_project%}.github{%endif%}/workflows/: ci.yaml  pr.yaml  release-please.yaml
template/{{cookiecutter.project_name}}/: __init__.py
template/{{project_name}}/: __init__.py  __init__.py.jinja  logging.py  main.py.jinja
tests/: _utils.py  conftest.py  test_generate_from_template.py  test_post_copy_tasks.py  test_validators.py
{{cookiecutter.project_name}}/: .markdownlint-cli2.yaml  .pre-commit-config.yaml  CHANGELOG.md  README.md  justfile  pyproject.toml
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: main.py
