[project]
name = "pycliche"
version = "2.7.0"
description = ""
authors = [
    {name = "Alberto Morón Hernández", email = "<alberto.moronh@gmail.com>"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=8.30.0,<9.0.0"
]

[dependency-groups]
test = [
    "copier>=9.4.1",
    "pip>=24.3.1",
    "pytest>=8.3.3",
]

[tool.ruff]
exclude = [".pdbrc"]
extend-exclude = ["*project_name*"]
force-exclude = true
indent-width = 4
line-length = 90
target-version = "py312"

[tool.ruff.lint]
# (`B`) flake8-bugbear
# (`E`) pycodestyle
# (`I`) isort
# (`F`) Pyflakes
# (`S`) flake8-bandit
# (`W`) pycodestyle warnings
ignore = []
select = ["B", "E", "I", "F", "S", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S"]
