[project]
name = "pycliche"
version = "2.15.0"
description = ""
authors = [
    {name = "Alberto Morón Hernández", email = "alberto.moronh@gmail.com"}
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.0.2,<10.0.0",
    "structlog>=25.2.0,<26.0.0",
]

[dependency-groups]
test = [
    "copier>=9.4.1,<10.0.0",
    "pip>=24.3.1,<25.0.0",
    "pre-commit>=4.2.0,<5.0.0",
    "pytest>=8.3.3",
    "pyyaml>=6.0.2",
    "sh>=2.2.1,<3.0.0",
]

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:Pdb"
markers = [
    "integration",
    "slow",
    "smoke",
    "unit",
]

[tool.ruff]
exclude = [".pdbrc"]
extend-exclude = ["*project_name*"]
force-exclude = true
indent-width = 4
line-length = 90
target-version = "py312"

[tool.ruff.lint]
ignore = []
select = [
    # flake8-bugbear
    "B",
    # pydocstyle
    "E",
    # isort
    "I",
    # flake8-no-pep420
    "INP",
    # Pyflakes
    "F",
    #flake8-logging-format
    "G",
    # flake8-logging
    "LOG",
    # flake8-bandit
    "S",
    # flake8-tidy-imports
    "TID",
    # flake8-print
    "T20",
    # pycodestyle warnings
    "W",
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S"]
