# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = [
  {name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}"}
]
readme = "README.md"
requires-python = ">={{cookiecutter.python_version}}"
dependencies = []
