# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = [
  {name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}"}
]
readme = "README.md"
requires-python = ">={{cookiecutter.python_version}}"
dependencies = []

[tool.ruff]
target-version = "py{{cookiecutter.python_version_nodot}}"
line-length = 90
indent-width = 4

[tool.ruff.lint]
# pycodestyle (`E`), isort (`I`), Pyflakes (`F`), pycodestyle warnings (`W`)
select = ["E", "I", "F", "W"]
ignore = []
